--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -5,30 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jAnki</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/todosStyling.css">
 </head>
 <body>
-    <h1>My jAnki Card Deck</h1>
-    <ul>
-    <% todos.forEach( el => { %>
-            <li class='todoItem' data-id='<%=el._id%>'>
-                <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.cardFront %></br><%= el.cardBack %></span>
-                <span class='del'> Delete </span>
-            </li>
-    <% }) %>    
-    </ul>
+    <section class="top-of-page">
+        <h1>My jAnki Card Deck</h1>
 
-    <h2><%= user.userName %> has <%= left %> cards to review!</h2>
+   
+        <ul>
+        <% todos.forEach( el => { %>
+                <li class='todoItem' data-id='<%=el._id%>'>
+                    <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.cardFront %></br><%= el.cardBack %></span>
+                    <span class='del'> Delete </span>
+                </li>
+        <% }) %>    
+        </ul>
+    </section>
 
-    <h3>Create a card to add to the jAnki deck!</h3>
+    <section class="create-new-card">
+        <h2><%= user.userName %> has <%= left %> cards to review!</h2>
 
-    <form action="/todos/createTodo" method='POST'>
-        <label for="cardFront">Front:</label>
-        <input type="text" placeholder="Enter front of card" name='cardFront'>
-        <label for="cardBack">Back:</label>
-        <input type="text" placeholder="Enter back of card" name='cardBack'>
-        <input type="submit">
-    </form>
+        <h3>Create a card to add to the jAnki deck!</h3>
+
+        <form action="/todos/createTodo" method='POST'>
+            <label for="cardFront">Front:</label>
+            <input type="text" placeholder="Enter front of card" name='cardFront'>
+            <label for="cardBack">Back:</label>
+            <input type="text" placeholder="Enter back of card" name='cardBack'>
+            <input type="submit">
+        </form>
+    </section>
 
     <a href="/logout">Logout</a>
 
